--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -5,7 +5,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:srcCompat="@android:drawable/btn_star_big_on"
@@ -14,18 +14,20 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:id="@+id/imageView"/>
+            app:civ_border_width="2dp"
+            app:civ_border_color="@android:color/white"
+            android:id="@+id/imageview_chat_from_row"/>
     <TextView
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin varius iaculis accumsan. Nulla sodales egestas nunc, vitae rhoncus ante tempor a. Nam rutrum metus ut hendrerit fermentum."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textview_to_row"
+            android:id="@+id/textview_from_row"
             android:background="@drawable/rounded_edittext_register_login"
             android:padding="16dp"
             android:maxWidth="240dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/imageview_chat_from_row"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageview_chat_from_row"
     />
 </android.support.constraint.ConstraintLayout>
