--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -5,12 +5,17 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:srcCompat="@android:drawable/btn_star_big_on"
-            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="16dp"
+            android:id="@+id/imageview_chat_to_row"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@android:color/white"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin varius iaculis accumsan. Nulla sodales egestas nunc, vitae rhoncus ante tempor a. Nam rutrum metus ut hendrerit fermentum."
@@ -20,7 +25,7 @@
             android:background="@drawable/rounded_edittext_register_login"
             android:padding="16dp"
             android:maxWidth="240dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView"/>
+            app:layout_constraintTop_toTopOf="@+id/imageview_chat_to_row"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/imageview_chat_to_row"
+            android:layout_marginRight="8dp"/>
 </android.support.constraint.ConstraintLayout>
