--- a/app/src/main/res/layout/latest_message_row.xml
+++ b/app/src/main/res/layout/latest_message_row.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="120dp">
 
-    <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:srcCompat="@android:drawable/btn_star_big_on"
             android:id="@+id/imageview_latest_message"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@android:color/black"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
-            android:text="Username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username_textview_latest_message"
             app:layout_constraintStart_toEndOf="@+id/imageview_latest_message"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/message_textview_latest_message" android:textStyle="bold"/>
+            app:layout_constraintBottom_toTopOf="@+id/message_textview_latest_message"
+            android:textStyle="bold" tools:text="Username"/>
     <TextView
             android:text="Latest message"
             android:layout_width="0dp"
@@ -32,5 +41,5 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintTop_toBottomOf="@+id/username_textview_latest_message" app:layout_constraintHorizontal_bias="0.0"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 </android.support.constraint.ConstraintLayout>
